# LillyMol-4.0-Bazel

./: .gitignore  .gitmodules  README  makeall.sh  makefile.public.Linux-gcc-9.3.0
docs/: dicer.md  (+2 more)
src/: .bazelrc  .clang-format  .dockerignore  .gdghistory  .gitignore  .pylintrc  CMakeLists.txt  MODULE.bazel  Makefile  WORKSPACE  WORKSPACE.minimal  bb.smi  bridged_aromatic.qry  bridged_aromatic.smi  caffeine.rand.smi  caffeine.smi  compile_commands.json  ord_schema.BUILD  t.jl
src/AWS/: BUILD  read_file.cc
src/Duplicate/: BUILD  aggregate_rings.py  align_molecules.cc  dicer_fragment.proto  get_substituent.cc  mispredicted.cc  replacement_ring.proto  ring_ext_rep.cc  ring_extraction.cc  ring_replacement.cc  stratified_sample.cc
src/Foundational/: CMakeLists.txt  Makefile
src/Foundational/accumulator/: BUILD  Makefile  _accumulator_uint.cc  _accumulator_uint_v2.cc  _accumulator_unsigned_int.cc  accumulator.h  accumulator_v2.h
src/Foundational/cmdline/: BUILD  CMakeLists.txt  Makefile  cmdline.cc  cmdline.h  cmdline_stdstring.cc
src/Foundational/cmdline_v2/: BUILD  Makefile  cmdline.cc
src/Foundational/data_source/: BUILD  CMakeLists.txt  Makefile  binary_data_file.cc  binary_data_file.h  binary_data_file_test.cc  iwmmap.h  iwstring_data_source.cc  iwstring_data_source.h  iwstring_data_source_test.cc  nstring_data_source.cc  string_data_source.cc  test_tfdata_record.cc  tfdatarecord.cc  tfdatarecord.h  tiwds.cc
src/Foundational/histogram/: BUILD  Makefile  histogram_fp.cc  iwhistogram.cc  iwhistogram.h  most_recent.h
src/Foundational/iw_tdt/: BUILD  Makefile  fetch_tdt.cc  fetch_tdt_quick.cc  iw_tdt.cc  iw_tdt.h  tdt_sort.cc  tdt_stats.cc
src/Foundational/iwaray/: BUILD  CMakeLists.txt  Makefile  barf.cc  iwaray.h  iwaray_np_.h  iwaray_test.cc
src/Foundational/iwbits/: BUILD  CMakeLists.txt  Makefile  bits_in_common.c  du_bin2ascii.cc  dy_fingerprint.cc  fixed_bit_vector.cc  fixed_bit_vector.h  fixed_bit_vector_test.cc  fixed_size_counted_fingerprint.cc  fppop.cc  hexbits.cc  iwbits.cc  iwbits.h  tbits.cc
src/Foundational/iwmisc/: BUILD  CMakeLists.txt  Makefile  _iwarchive_double.cc  _iwarchive_float.cc  _iwarchive_int.cc  _iwarchive_uint.cc  _minmaxspc_double.cc  _minmaxspc_float.cc  _minmaxspc_int.cc  _set_or_unset_streampos.cc  append_first_token_of_name.cc  combinations_test.cc  fetch_via_regexp.cc  fraction_as_string.cc  fraction_as_string_test.cc  iwarchive.h  iwconfig.h  iwdigits.cc  iwdigits.h  iwdigits_test.cc  iwfactorial.h  iwre2.cc  iwre2.h  iwre2_test.cc  iwuudecode.cc  logical_expression.cc  logical_expression.h  logical_expression_test.cc  matcher.h  memoized_floats_test.cc  minmaxspc.h  misc.h  msi_object.cc  msi_object.h  new_array_.h  normalisation.cc  numeric_data_from_file.h  proto_support.cc  proto_support.h  (+7 more)
src/Foundational/iwqsort/: BUILD  Makefile  iwqsort.h
src/Foundational/iwstring/: BUILD  CMakeLists.txt  IWString_class.cc  Makefile  absl_hash.cc  absl_hash.h  iw_stl_hash_map.cc  iw_stl_hash_map.h  iw_stl_hash_set.h  iwgetline.cc  iwstring.cc  iwstring.h  iwstring_and_file_descriptor.cc  iwstring_test.cc  iwwrite.cc  iwzlib.cc  iwzlib.h  should_match.cc  t.cc  tsclass.cc  write_test.cc  ww.cc
src/Foundational/jama/: Makefile  jama_svd.h
src/Foundational/mtrand/: BUILD  CMakeLists.txt  Makefile  _random_number_between_double.cc  _random_number_between_float.cc  _random_number_between_int.cc  _random_number_between_long.cc  _random_number_between_long_long.cc  _random_number_between_uint.cc  _random_number_between_unsigned_long.cc  iwrandom.cc  tiwrandom.cc  tiwrandom_mtrand.cc  tnormal.cc
src/Foundational/string_data_source/: BUILD  CMakeLists.txt  Makefile  iwstring_string_data_source.cc  iwstring_string_data_source.h  iwstring_string_data_source_test.cc
src/Foundational/tnt/: Makefile
src/Foundational/xmlParser/: BUILD  Makefile  xmlParser.cpp
src/Molecule_Lib/: BUILD  CMakeLists.txt  ISIS_Atom_List.cc  Makefile  _collection_template_float.cc  _iwaray_rxn.cc  _qry_wstats.cc  _resizable_array_p_mgroup.cc  _substructure.cc  allowed_elements.cc  allowed_elements.h  aromatic.cc  aromatic.h  aromatic_test.cc  atom.cc  atom.h  atom_alias.cc  atom_alias.h  atom_pair_fingerprint.cc  atom_pair_fingerprint.h  atom_test.cc  atom_typing.cc  atom_typing.h  bond.cc  bond.h  bond_list.cc  bond_list.h  charge_assigner.cc  charge_assigner.h  charge_calculation.cc  charmm.cc  chiral_centre.cc  chiral_centre.h  cif.cc  cis_trans_bond.cc  collection_template.h  coordinate_box.cc  coordinate_box.h  coordinate_box.proto  coordinate_box_test.cc  (+178 more)
src/Molecule_Tools/: BUILD  CMakeLists.txt  Makefile  activity_consistency.cc  atom_pair_fingerprint_main.cc  atom_separation_test.cc  atom_separations.cc  atom_separations.h  buildsmidb_leveldb.cc  comma_related_procedures.cc  common_names.cc  compare_3d.cc  conformational_scan.cc  coords_and_connectivity.cc  coords_and_connectivity.h  coords_and_connectivity_test.cc  core_replacement.cc  core_replacement_lib.cc  core_replacement_lib.h  core_replacement_lib_test.cc  crispr.cc  dbf.cc  demerit.cc  demerit.h  diced_molecule.proto  dicer.cc  dicer_api.cc  dicer_api.h  dicer_api.proto  dicer_simple.cc  dicer_to_cores.cc  do_remove_duplicate_fragments.cc  ec_fingerprint.cc  ec_fingerprint.h  ec_fingerprint_main.cc  ec_fingerprint_test.cc  echoqry.cc  embedded_fragment.proto  extended_connectivity_fp.cc  fileconv.cc  (+119 more)
src/SMU/: BUILD  smu.h  smu_duplicates.cc  smu_rotatable_bond.cc
src/Utilities/: Makefile  skeleton.cc
src/julia/: BUILD  lillymol.cc
src/lemon/: README.md  llymol_lemon.h  vf_substructure_search.cc
src/smu/: BUILD  SMU_3d_search_main.cc  bond_length_distribution.proto  bond_score.cc  chirality.cc  dataset.proto  get_3d_smiles.cc  get_all_bond_length_distributions.cc  get_atomic_property.cc  get_bond_length_distribution.cc  get_nmr.cc  get_property.cc  get_smiles_bt.cc  smu.cc  smu_main.cc  smu_property_plot.jl  smu_results.cc  smu_ring_membership_change.cc  smu_rotatable_bond.cc  smu_superimpose_3d_matches.cc  support.cc  support.h
src/toolchain/: BUILD  cc_toolchain_config.bzl
(+257 files in other folders)
