module(name = 'lillymol', version = "1.0")

bazel_dep(name = "abseil-cpp", version = "20230125.1", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "googletest", version = "1.12.1")
bazel_dep(name = "lmdb", version = "0.9.29")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "re2", version = "2021-09-01")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_java", version = "5.5.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.19.0")
bazel_dep(name = "zlib", version = "1.2.13")
